[gd_scene load_steps=11 format=3 uid="uid://ceqhjvg27ldac"]

[ext_resource type="Script" path="res://assets/scenes/robot.gd" id="1_3ftx0"]
[ext_resource type="Texture2D" uid="uid://f373k07nv6gr" path="res://assets/sprites/robot.png" id="1_8vtit"]
[ext_resource type="Texture2D" uid="uid://i18f6xl2eq7p" path="res://assets/sprites/claw arm.png" id="3_t3h0w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_044c1"]
size = Vector2(94.0476, 85.7143)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oglj3"]
size = Vector2(14.2857, 10.7143)

[sub_resource type="Animation" id="Animation_s5hlo"]
resource_name = "open"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftClawOut:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-10.6667, -19.2857)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeftClawOut:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RightClawOut:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10.969, -19.2857)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RightClawOut:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_gtxc7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftClawOut:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-10.6667, -19.2857)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeftClawOut:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RightClawOut:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10.969, -19.2857)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RightClawOut:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_pfiif"]
resource_name = "close"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftClawOut:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.785397]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_csxom"]
_data = {
"RESET": SubResource("Animation_gtxc7"),
"close": SubResource("Animation_pfiif"),
"open": SubResource("Animation_s5hlo")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_45q1w"]
size = Vector2(15, 7.14286)

[node name="robot" type="CharacterBody2D" node_paths=PackedStringArray("arm", "claw", "clawAnimationPlayer")]
scale = Vector2(0.84, 0.84)
script = ExtResource("1_3ftx0")
arm = NodePath("Arm")
claw = NodePath("Arm/ClawRemoteTransform")
clawAnimationPlayer = NodePath("Arm/Claw/ClawAnimations")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.595243, -1.19047)
shape = SubResource("RectangleShape2D_044c1")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2
texture = ExtResource("1_8vtit")

[node name="Arm" type="RigidBody2D" parent="."]
position = Vector2(-1.19048, -45.2381)
collision_layer = 2
collision_mask = 2
mass = 100.0
can_sleep = false
lock_rotation = true
contact_monitor = true
max_contacts_reported = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arm"]
position = Vector2(-1.19209e-07, -5.35715)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_oglj3")

[node name="ArmSprite" type="Sprite2D" parent="Arm/CollisionShape2D"]
z_index = 1
position = Vector2(1.19209e-07, 5.35715)
scale = Vector2(1, 1)
texture = ExtResource("3_t3h0w")

[node name="Claw" type="Node2D" parent="Arm"]
top_level = true
position = Vector2(-1, -33)
scale = Vector2(1, 1)

[node name="LeftClawBase" type="Sprite2D" parent="Arm/Claw"]
position = Vector2(-7.09524, -12.1429)
rotation = -0.785397
scale = Vector2(0.47619, 0.47619)
texture = ExtResource("3_t3h0w")

[node name="LeftClawOut" type="Sprite2D" parent="Arm/Claw"]
position = Vector2(-10.6667, -19.2857)
scale = Vector2(0.47619, 0.47619)
texture = ExtResource("3_t3h0w")

[node name="RightClawOut" type="Sprite2D" parent="Arm/Claw"]
position = Vector2(10.969, -19.2857)
scale = Vector2(0.47619, 0.47619)
texture = ExtResource("3_t3h0w")

[node name="RightClawBase" type="Sprite2D" parent="Arm/Claw"]
position = Vector2(7.39762, -12.1429)
rotation = 0.785397
scale = Vector2(0.47619, 0.47619)
texture = ExtResource("3_t3h0w")

[node name="ClawAnimations" type="AnimationPlayer" parent="Arm/Claw"]
libraries = {
"": SubResource("AnimationLibrary_csxom")
}
autoplay = "open"

[node name="Claw Grip Collider" type="Area2D" parent="Arm/Claw"]
scale = Vector2(1.1772, 1.00964)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arm/Claw/Claw Grip Collider"]
position = Vector2(0.5, -21.4286)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_45q1w")
debug_color = Color(0.957933, 2.02149e-06, 0.529889, 0.42)

[node name="ClawRemoteTransform" type="RemoteTransform2D" parent="Arm"]
position = Vector2(-1.19209e-07, 5.95238)
scale = Vector2(1, 1)
remote_path = NodePath("../Claw")
update_scale = false

[connection signal="body_entered" from="Arm" to="." method="_on_arm_body_entered"]
[connection signal="body_entered" from="Arm/Claw/Claw Grip Collider" to="." method="_on_claw_grip_collider_body_entered"]
[connection signal="body_exited" from="Arm/Claw/Claw Grip Collider" to="." method="_on_claw_grip_collider_body_exited"]
